test: 아이템 생성 기능 테스트 재작성